# TuyaOpen

./: .gitignore  export.bat  export.ps1  export.sh
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/: CMakeLists.txt  Kconfig  README.md  app_default.config  compile_commands.json
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/: CMakeLists.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/components/: ui_comp.c  ui_comp_floder_item_container.c  ui_comp_floder_item_container.h  ui_comp_hook.c  ui_comp_list_item.c  ui_comp_list_item.h  ui_comp_menu_item_container.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/ebook/: ui_ebook_reader.c  ui_ebook_reader.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/: CMakeLists.txt  README.md
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/include/: epub_reader.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/src/: epub_interactive.c  epub_reader.c  hello_world.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/src/libminizip/: crypt.h  ioapi.c  ioapi.h  ioapi_tkl.c  ioapi_tkl.h  miniunz.c  minizip.c  mztools.c  mztools.h  unzip.c  unzip.h  zip.c  zip.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/src/zlib/: adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  uncompr.c  zlib.h  zutil.c  zutil.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/epub_reader/src/zlib/examples/: enough.c  fitblk.c  gun.c  gzappend.c  gzjoin.c  gzlog.c  gznorm.c  (+3 more)
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/fonts/: ui_font_JetBrains_Mono_Bold_12_4.c  ui_font_JetBrains_Mono_Bold_14_2.c  ui_font_JetBrains_Mono_Bold_18_1.c  ui_font_JetBrains_Mono_Bold_24_4.c  ui_font_JetBrains_Mono_Bold_32_4.c  ui_font_JetBrains_Mono_Regular_12_1.c  ui_font_JetBrains_Mono_Regular_16_2.c  ui_font_puhui_48.c  ui_font_terminus_bold_14_1.c  ui_font_terminus_bold_14_2.c  ui_font_terminus_bold_18_2.c  ui_font_terminus_bold_32_2.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/fs_helper/: ui_fs.c  ui_fs.h  ui_fs_badge.c  ui_fs_badge.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/images/: ui_img_image_badge_tuyaopen_logo_png.c  ui_img_image_badge_tuyaopen_qr_48_png.c  ui_img_image_floder_unkonwn_32_png.c  ui_img_image_floder_wallpaper_png.c  ui_img_image_menu_badge_50_png.c  ui_img_image_statue_bar_battery_battery_60_30_png.c  ui_img_image_statue_bar_battery_battery_empty_30_png.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/screens/: ui_badge_screen.c  ui_badge_screen.h  ui_file_screen.c  ui_file_screen.h  ui_floder_screen.c  ui_floder_screen.h  ui_home_screen.c  ui_home_screen.h  ui_setting_screen.c  ui_setting_screen.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/service/: ui_status_event.c  ui_status_event.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui/tool/: README.md  tff2bin.py
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui_bak/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.h  ui_themes.c  ui_themes.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui_bak/components/: ui_comp.h  ui_comp_floder_item_container.c  ui_comp_floder_item_container.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_list_item.c  ui_comp_list_item.h  ui_comp_menu_item_container.c  ui_comp_menu_item_container.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui_bak/fonts/: ui_font_JetBrains_Mono_Bold_12_1.c  ui_font_JetBrains_Mono_Bold_12_2.c  ui_font_JetBrains_Mono_Regular_14_2.c  ui_font_terminus_bold_16_1.c  ui_font_terminus_bold_16_2.c  ui_font_terminus_bold_24_4.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui_bak/images/: ui_img_image_badge_nfc_32_png.c  ui_img_image_floder_epub_32_png.c  ui_img_image_floder_floder_32_png.c  ui_img_image_floder_png_32_png.c  ui_img_image_floder_txt_32_png.c  ui_img_image_menu_folder_50_png.c  ui_img_image_menu_setting_50_png.c  ui_img_image_setting_language_32_png.c  ui_img_image_setting_light_32_png.c  ui_img_image_setting_sleep_time_32_png.c  ui_img_image_statue_bar_battery_battery_charging_30_png.c  ui_img_image_statue_bar_battery_battery_full_30_png.c  ui_img_image_statue_bar_battery_battery_low_30_png.c  ui_img_image_statue_bar_sd_tf_30_png.c
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/app_ui_bak/screens/: ui_badge_screen.c  ui_badge_screen.h  ui_file_screen.c  ui_file_screen.h  ui_floder_screen.c  ui_home_screen.c  ui_setting_screen.c  ui_setting_screen.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/config/: TUYA_T5AI_EINK_NFC.config
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/include/: app_hardware.h  app_input.h  app_lvgl.h
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/src/: app_hardware.c  app_input.c  app_lvgl.c  app_sdcard_demo.c  main.c  tuya_main.c
examples/graphics/pocket_pet/: CMakeLists.txt  app_default.config
examples/graphics/pocket_pet/src/: example_pet.c
examples/graphics/pocket_pet/src/ui/: ai_pocket_pet_app.c  menu_system.c
src/libu8g2/: CMakeLists.txt  Kconfig
src/libu8g2/port/: u8g2_port.c  u8g2_port.h  u8g2_port_setup.c  u8g2_port_setup.h
src/libu8g2/u8g2/csrc/: u8g2.h  u8g2_ll_hvline.c  u8x8.h
src/libu8g2/u8g2/csrc/driver/: u8x8_d_ssd1306_128x64_noname.c  u8x8_d_st7305.c
src/peripherals/nfc/: CMakeLists.txt  Kconfig
src/peripherals/nfc/pn532/inc/core/: log-internal.h  log.h  nfc_config.h  platform_compat.h
src/peripherals/nfc/pn532/inc/ndef/: ndef.h
src/peripherals/nfc/pn532/inc/utils/: nfc-utils.h
src/peripherals/nfc/pn532/src/buses/: uart.c
src/peripherals/nfc/pn532/src/chips/: pn53x.c
src/peripherals/nfc/pn532/src/core/: iso14443-subr.c  log.c  mirror-subr.c  nfc-device.c  nfc-internal.c  nfc.c
src/peripherals/nfc/pn532/src/drivers/: pn532_uart.c
src/peripherals/nfc/pn532/src/ndef/: ndef.c
(+382 files in other folders)
